RESOLVED FIXED43681
frame()->selection() can't be null
https://bugs.webkit.org/show_bug.cgi?id=43681
Summary frame()->selection() can't be null
Adam Barth
Reported 2010-08-07 14:40:47 PDT
frame()->selection() can't be null
Attachments
Patch (1.63 KB, patch)
2010-08-07 14:41 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-08-07 14:41:39 PDT
Dimitri Glazkov (Google)
Comment 2 2010-08-07 15:58:02 PDT
Comment on attachment 63830 [details] Patch ok.
Eric Seidel (no email)
Comment 3 2010-08-08 00:56:01 PDT
Comment on attachment 63830 [details] Patch Clearing flags on attachment: 63830 Committed r64946: <http://trac.webkit.org/changeset/64946>
Eric Seidel (no email)
Comment 4 2010-08-08 00:56:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.