2010-08-08  Adam Barth  <abarth@webkit.org>

Reviewed by Dimitri Glazkov.

        frame()->selection() can't be null
        https://bugs.webkit.org/show_bug.cgi?id=43681

        SelectionController is a component of Frame.  If frame is non-null, it
        can't possibly be null.

        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::setActive):

Canonical link: https://commits.webkit.org/55759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64946 268f45cc-cd09-0410-ab3c-d52691b4dbfc